--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,7 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-body { background:rgb(220, 220, 225); }
-form{ max-width:420px; margin:50px auto;
+body { background:rgb(255, 255, 255); }
+form{ max-width:420px; 
+  margin:50px auto;
+  border-color: black;
+  border-radius: 500px;
+
+
 
 }
 img{
