--- a/src/components/home.css
+++ b/src/components/home.css
@@ -175,7 +175,7 @@ a:hover {
   padding:0 30px;
   
   & div {
-    background-color: #F7F7F7;
+    background-color: #ebe7e7;
     border: 1px solid #E2E2E2;
     padding: 0 20px;
     margin:15px 0;
